--- a/stock/NAMESPACE
+++ b/stock/NAMESPACE
@@ -3,5 +3,5 @@ import()
 importFrom(Rcpp, evalCpp)
 ## export all regularly named functions
 ## (but allow for private functions whose name starts with a dot).name <- function(...)
-#exportPattern(".")
-exportPattern("^[[:alpha:]]+")
+exportPattern(".")
+#exportPattern("^[[:alpha:]]+")
