--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,14 @@
 Package: IESTR
 Type: Package
-Title: What the Package Does Using Title Case
+Title: IESTR is a package for modelisation of species range dynamics in time, and optimisation of introduction choices under different constraints.
 Version: 1.0
-Date: 2022-12-05
-Author: Your Name
-Maintainer: Your Name <your@email.com>
-Description: More details about what the package does. See
-          <http://cran.r-project.org/doc/manuals/r-release/R-exts.html#The-DESCRIPTION-file>
-          for details on how to write this part.
+Date: 2023-12-05
+Author: Arnaud Callebaut
+Maintainer: Arnaud Callebaut <arnaud.callebaut@outlook.fr>
+Description: The main objective of IESTR is to calculate where and when to introduce a species, to satisfy a certain objective of conservation, using trnasition matrix. The package use the concept of transition matrices using information about the species given by the user : migration kernel, map of presence, suitability over time. Transition matrices allow to know how evolves the introduction of the species in any point in space and time of the map. These allow, under optimisation constraints given by the user (such as a limited budget, or an objective of area of presence by the end of the study presence)
 License: GPL (>= 2)
 Suggests: 
 Encoding: UTF-8
 RoxygenNote: 7.2.0
 Imports: Rcpp (>= 1.0.7), Matrix
-LinkingTo: RcppArmadillo, RcppEigen, Rcpp
+LinkingTo: RcppArmadillo, RcppEigen,Rcpp
