--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Suggests: knitr,rmarkdown,
     testthat (>= 3.0.0)
 Encoding: UTF-8
 VignetteBuilder: knitr
-RoxygenNote: 7.2.3
-Imports: Rcpp (>= 1.0.7),Matrix,dplyr,ggplot2,lattice,purrr,raster,cowplot,viridis,tidyverse,gridExtra,wesanderson
+RoxygenNote: 7.3.0
+Imports: Rcpp (>= 1.0.7),Matrix,dplyr,ggplot2,lattice,purrr,raster,cowplot,viridis,tidyverse,gridExtra,wesanderson,terra
 LinkingTo: RcppArmadillo, RcppEigen,Rcpp
 Config/testthat/edition: 3
